try lincheck よーわからんエラーで, 動いてない